--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -292,7 +292,7 @@
     "already-has-network": {
       "title": "Network already exists",
       "button-label": "My network",
-      "content": "Connected wallet already has a network."
+      "content": "Connected wallet already has a network on this chain."
     },
     "settings-not-loaded": {
       "title": "Failed to load settings",
