--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -64,7 +64,7 @@
       "error": "To start working on this bounty"
     },
     "kyc": {
-      "identify-to-start": "Identify to start working"
+      "identify-to-start": "Start KYC"
     }
   },
   "errors": {
@@ -137,7 +137,7 @@
     "is-required": "Required KYC validation",
     "refresh": "Refresh Session",
     "tool-tip": "Become mandatory do a KYC validation to participate on bounty.",
-    "identify-to-start": "Identify to start working",
+    "identify-to-start": "Start KYC",
     "identify-kyc": "Start KYC",
     "identified": "Successfully identified, you can close this modal",
     "identifying": "Identifying..",
