--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -382,6 +382,10 @@
       "set-disputable-time": "Set Disputable Time",
       "set-council-amount": "Set Curator Amount",
       "set-percentage-dispute": "Set Percentage for Dispute",
+      "set-cancelable-time": "Set Cancelable Time",
+      "set-oracle-exchange-rate": "Set Oracle Exchange Rate",
+      "set-proposer-fee-share": "Set Proposer Fee Share",
+      "set-merge-creator-fee-share": "Set Merge Creator Fee Share",
       "fund-bounty": "Fund Bounty",
       "retract-fund": "Retract Bounty Fund",
       "withdraw-fund-reward-bounty": "Withdraw Reward Bounty Fund",
