--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -15,6 +15,22 @@
   "percentage-for-dispute": "Percentage for dispute",
   "redeem-time": "Draft time",
   "council-amount": "Curator Amount",
+  "cancelable-time": {
+    "label": "Cancelable Time",
+    "description": "After this time the network governor can cancel a stuck bounty"
+  },
+  "oracle-exchange-rate": {
+    "label": "Oracle Exchange Rate",
+    "description": "Exchange rate applied when locking or unlocking tokens into the network"
+  },
+  "merger-fee": {
+    "label": "Merger Fee",
+    "description": "Percentage of the bounty amount distributed to the wallet that closed the bounty"
+  },
+  "proposer-fee": {
+    "label": "Proposal Creator Fee",
+    "description": "Percentage of the bounty amount distributed to the wallet that created the accepted proposal"
+  },
   "save-settings": "Save settings",
   "config-tokens-registry": "Config Allowed Tokens",
   "config-tokens": "Config Tokens",
