--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -11,7 +11,7 @@
     "period": "Period"
   },
   "actions": {
-    "remove-github-account": "Remove Github Account"
+    "remove-github-account": "Disconnect Github Account"
   },
   "tips": {
     "total-balance": "Total tokens in your wallet",
