Bepro 1452 mc if wallet is already in use and user has a gh session (#914)
* Dev 1185 fix update network tokens (#778)

* DEV-1185 fix update network tokens

* DEV-1185 add getnetworktokens endpoint

* DEV-1185 fix network tokens select

* DEV-1185 fix type

* DEV-1185 remove debugger

* DEV-1185 remove unused func

* DEV-1212 fix deep copy settings (#791)

* DEV-1212 fix deep copy settings

* DEV-1212 remove duplicate comment

* introduce needed changes to wrong-network-modal.tsx and app-state

* add and remove chains and show/hide supported chains modal accordignly

* missing null optional

* dapp now understands supported-chain-data and DAOService starts with the isDefault

missing: DAO must change whenever chainChanged to a supported chain and default to isDefault if no connectedChain.id -- start() should also change when this changes

* startDao() now accounts for connected chain and isDefault

* save registry-address in the supported-chain-data.ts as a call-to-action

* make it so we save chainId after creating network

* make it so we save chainId after creating network, after createNetwork

* nudges to useDao and loadNetwork flow

* nudges select-network-dropdown.tsx to its pure form

* save

* more work save to put out someother fire

* start the logic to be able to load a registry from registry-setup.tsx

* prepare stuff for signed sessions, as we will need it for setup stuff

* prepare for signature

* more signing work, almost there. gh problems occurr

* properly type message-for

* sign message via useAuth and don't sign it if already signed - unsign if admin does not match

* add default methods to the AdminRoute so we can control what can be seen via method as well as route

* pause.

* dupes and trailing comma leftovers from rebase

* dupes, rebase leftovers and lint

* actually save registry now -.-'

* save registryAddress after registry deployment

* starts out the addition of 

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -214,7 +214,7 @@
     },
     "invalid-account-wallet": {
       "title": "Github Account and Wallet don't match",
-      "description": "Please change to the previously connected wallet and disconnect your github account from your profile page if you wish to change the connection"
+      "description": "Please change to the previously connected wallet and disconnect your github account from your profile page if you wish to change the connection or connect with github already registered and disconnect from this wallet"
     },
     "not-mergeable": {
       "title": "Merging bounty",
