adding new profile page style

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -72,7 +72,7 @@
       "view-profile": "View profile",
       "profile": "Profile",
       "wallet": "Wallet",
-      "oracles": "lock/unlock",
+      "voting-power": "Voting Power",
       "payments": "Payments",
       "bounties": "Bounties",
       "pull-requests": "Pull Requests",
