--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -6,6 +6,7 @@
   "connect-wallet": "Connect Wallet",
   "council": "Curator",
   "connect-github": "Connect Github",
+  "go-to-network": "Go to Network",
   "connections": "Connections",
   "payments": {
     "period": "Period"
