Bepro 1361 create bounty form refactor (#927)
* Bepro 1370 fix UI bounty hall logos main nav logo and bounty hero states (#896)

* adding styles and logic bg

* adding color to bountyTags

* adjusting BountyTags component

* update Bagde logic

* adding opacity logic and refactoring style

* adding opacity param to hero

* adjusting space

* adding import

* adding color to hero

* adding ? to colors primary

* adjusting if association network

* DEV-982 Know Your Client (#860)

* DEV-982 add isKyc to bounties

* DEV-982 add isKyc badge

* DEV-982 add kyc session model

* DEV-982 init kyc session

* DEV-982 validate kyc session

* DEV-982 remove tier settings

* DEV-982 create helper find user by session

* DEV-982 isolate helper query

* DEV-982 add isKyc to bounties

* DEV-982 change isKyc to tierList

* DEV-982 add tierList to settings

* DEV-982 validate tier per bounty

* DEV-982 refresh step btn

* DEV-982 restore loading state

* DEV-982 changes request

* DEV-982 fix validate tiers

* DEV-982 fix check isKyc

* DEV-982 restore package-lock

* DEV-982 refresh token

* DEV-982 add isKyc to bounties

* DEV-982 add isKyc badge

* DEV-982 init kyc session

* DEV-982 validate kyc session

* DEV-982 change isKyc to tierList

* DEV-982 changes request

* DEV-982 fix conflicts

* DEV-982 fix conflicts

* DEV-982 remove debugger

* DEV-982 restore package-json

* DEV-982 restore check

* DEV-982 fix loading modal

* DEV-982 fix size modal

* doctors hands: Account for matching accounts before verifying a user

* linted

* clean dupes from rebase

* fix loggers

* make it so page.action on bounty redirects to profile and have the profile hold the kyc button

* dont return if no session

* make it so the timer actually makes sense and cleans when supposed to clean and creates only when needed

* make text green, adds a contextual span if success

* change labels



--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -27,11 +27,20 @@
     "finalized": "Finished",
     "validation": "validation & disputes",
     "closed": "closed & distributed",
-    "details": "details",
-    "bounty": "bounty",
-    "funding-request": "funding request",
-    "additional-details": "additional details", 
-    "review": "review"
+    "select-network": "Select Network",
+    "details": "Bounty details",
+    "reward": "Reward Information",
+    "review": "Review",
+    "github": "Github Information"
+  },
+  "descriptions": {
+    "select-network": "Select the chain and network you want to create your bounty",
+    "details": "Enter the necessary information to understand your bounty",
+    "github": "Inform the repository and the branch where the solution will be made",
+    "reward": "When creating a new bounty, you have two options regarding the reward:",
+    "reward-1": "1. Self-fund: You use your own money to create the bounty. This means you will be responsible for providing the reward money that will be given to the person who successfully completes the task.",
+    "reward-2": "2. Seek funding: You can seek funding for the bounty. This means you can look for other individuals who are willing to contribute to the reward money.",
+    "review": "In this step you will view the main information and get a sense of how your bounty is doing"
   },
   "status": {
     "ready": "ready",
@@ -84,26 +93,25 @@
   "title": "Create new Bounty",
   "fields": {
     "title": {
-      "label": "Bounty title",
-      "placeholder": "Your bounty title",
-      "tip": "Tip: Try to be as descriptive as possible"
+      "label": "Title",
+      "placeholder": "Your bounty title"
     },
     "description": {
       "label": "Description",
       "placeholder": "Type a description..."
     },
-    "preview-descripion": "Preview Description",
     "tags": "Tags",
     "tags-info": "Up to 3 tags",
+    "reward-type": "Reward Type",
     "select-token": {
-      "bounty": "{{set}} Bounty Token",
-      "reward": "{{set}} Reward Token"
+      "bounty": "Set Reward",
+      "reward": "Set Funded Reward"
     },
     "set": "Set",
     "amount": {
       "label": "amount",
       "info": "{{amount}} {{token}} Available",
-      "max": "Max"
+      "max": "Use max"
     },
     "conversion-token": {
       "invalid": "Could not convert this token",
@@ -111,11 +119,12 @@
     }
   },
   "reward-funders": "Reward Funders",
+  "reward-funders-description": "Reward anyone who funds this bounty.",
   "review": {
     "repository": "Repository",
     "branch": "Branch"
   },
-  "create-bounty": "Create Bounty",
+  "create-bounty": "Create Bounty", 
   "next-step": "Next Step",
   "bounty-created": "Bounty created",
   "in-bounties": "in Bounties",
@@ -131,6 +140,10 @@
   "save-changes": "Save Changes",
   "cancel-changes": "Cancel Changes",
   "preview": "preview",
+  "write": "write", 
+  "self-fund": "Self-fund",
+  "seek-funding": "Seek Funding",
+  "balance": "balance:",
   "edit": "edit",
   "most-active-network-empty": "Not found active networks",
   "kyc": {
@@ -143,5 +156,11 @@
     "identifying": "Identifying..",
     "label": "KYC",
     "steps": "{{current}} of {{total}} steps"
-  }
+  },
+  "bounty-examples": "See bounty examples",
+  "finding-yourself-lost": "Finding yourself lost?",
+  "terms-and-conditions": "terms and conditions.",
+  "creating-this-bounty": "By creating this bounty you agree to our",
+  "see-bounty": "See Bounty",
+  "created-success": "Bounty created successfully!"
 }
