--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -126,6 +126,9 @@
     "branch": "Branch"
   },
   "create-bounty": "Create Bounty", 
+  "create-funding": "Create Funding Request", 
+  "not-found-funding": "Funding requests make the community itself fund ideas they would like for their applications",
+  "not-found-bounty": "Not found recent bounties",
   "next-step": "Next Step",
   "bounty-created": "Bounty created",
   "in-bounties": "in Bounties",
@@ -134,6 +137,7 @@
   "sub-title-bounties": "A collection of the most recent bounties and MVP Networks on our ecosystem",
   "most-active-networks": "Most Active Networks",
   "recent-bounties": "Recent Bounties",
+  "recent-funding": "Recent Funding requests",
   "all-bounties": "All Bounties",
   "explore-all": "Explore All",
   "recent-bounties-empty": "Not found recent bounties",
