--- a/public/locales/en/leaderboard.json
+++ b/public/locales/en/leaderboard.json
@@ -9,7 +9,7 @@
 "not-found": "Not found",
 "table": {
     "address": "Address",
-    "github-handle": "GithubHandle",
+    "github-handle": "Github name",
     "nfts": "NFTS",
     "actions": "Actions"
 }
