Bepro 1491 new oracle layout (#965)
* new styles

* using network-item component

* fix conflict

* creating multi network voting page and total votes component

* adding new column

* more work on multi-network voting power

* creation delegations table

* test

* multichain migration

* adding curator and delegations association

* adding timestamps

* multi-network done

* removing unused

* adding translations

* fix model name

* adding variant to delegation component

* fix wrong chain modal visibility

* fix page title doesn't change

* Update index.ts

* indentation

* indentation

* indentation

* indentation

---------

Co-authored-by: Marcus Vinícius <marcusvinici25@gmail.com>

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -6,11 +6,20 @@
   "oracle-name-placeholder": "Locked Network Token",
   "deletaged-to-me": "Delegated to me",
   "deletaged-to-others": "Delegated to others",
+  "total-votes": "Total Votes",
+  "locked-by-me": "Locked by me",
   "connect-wallet": "Connect Wallet",
   "council": "Curator",
   "connect-github": "Connect Github",
   "go-to-network": "Go to Network",
   "connections": "Connections",
+  "voting-power": "Voting Power",
+  "need-network-to-manage": "To manage your voting power you need to be in a especific network",
+  "network-columns": {
+    "network-name": "Network name",
+    "total-votes": "Total votes",
+    "network-link": "Network link"
+  },
   "payments": {
     "period": "Period"
   },
