--- a/public/locales/en/proposal.json
+++ b/public/locales/en/proposal.json
@@ -19,7 +19,9 @@
     "no-proposals-created": "There are no proposals created.",
     "distribution-cant-done": "This distribution can't be done try another one.",
     "proposal-refused": "Proposal Refused",
-    "in-disputable-time": "{{time}} before proposal can be merged."
+    "in-disputable-time": "{{time}} before proposal can be merged.",
+    "owner-pull-request": "You cannot accept a proposal containing your own pull request",
+    "owner-proposal": "You cannot accept a proposal created by you"
   },
   "errors": {
     "not-found": "No proposals found",
