--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -78,7 +78,7 @@
       "bounties": "Bounties",
       "pull-requests": "Pull Requests",
       "proposals": "Proposals",
-      "my-network": "My Network",
+      "my-network": "Custom Network",
       "support-center": "Support Center",
       "guides": "Guides",
       "join-discord": "Join the Discord",
