--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -63,6 +63,7 @@
     "redeem": "Redeem",
     "update-amount": "Update Amount",
     "edit-bounty": "Edit Bounty",
+    "update-bounty": "Bounty updated",
     "recognize-finished": {
       "title": "Recognize as finished",
       "error": "Failed to mark bounty as finished"
@@ -75,6 +76,13 @@
     "kyc": {
       "identify-to-start": "Start KYC"
     }
+  },
+  "management": {
+    "label": "Management",
+    "name": "Name",
+    "link": "Bounty Link",
+    "hide": "Hide Bounty",
+    "cancel": "Cancel"
   },
   "errors": {
     "fetching": "Error fetching bounty",
