--- a/public/locales/en/setup.json
+++ b/public/locales/en/setup.json
@@ -3,7 +3,7 @@
   "registry": {
     "title": "Registry",
     "changing-labels": {
-      "bounty-fess": "Bounty Fees",
+      "bounty-fees": "Bounty Fees",
       "network-creation-fee": "Network Creation Fee",
       "network-creation-amount": "Network Creation Amount",
       "transactional": "Transactional Tokens",
